<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClick"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_equal" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClick"
        android:text="@string/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_point" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_nine"
        app:layout_constraintBottom_toTopOf="@+id/button_six"
        app:layout_constraintStart_toEndOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_eight"
        app:layout_constraintBottom_toTopOf="@+id/button_five"
        app:layout_constraintStart_toEndOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_seven"
        app:layout_constraintBottom_toTopOf="@+id/button_four"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_point"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClick"
        android:text="@string/button_point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_zero" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_six"
        app:layout_constraintBottom_toTopOf="@+id/button_three"
        app:layout_constraintStart_toEndOf="@+id/button_five" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_five"
        app:layout_constraintBottom_toTopOf="@+id/button_two"
        app:layout_constraintStart_toEndOf="@+id/button_four" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_three"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_two" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_two"
        app:layout_constraintBottom_toTopOf="@+id/button_point"
        app:layout_constraintStart_toEndOf="@+id/button_one" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClick"
        android:text="@string/button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/formula"
        android:layout_width="336dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/formula"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_one"
        app:layout_constraintBottom_toTopOf="@+id/button_zero"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_four"
        app:layout_constraintBottom_toTopOf="@+id/button_one"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_minus"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_three" />

    <Button
        android:id="@+id/button_multi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_multi"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_six" />

    <Button
        android:id="@+id/button_divide3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClick"
        android:text="@string/button_divide"
        app:layout_constraintBottom_toTopOf="@+id/button_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_clear"
        app:layout_constraintBottom_toTopOf="@+id/button_divide3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/result" />

    <EditText
        android:id="@+id/result"
        android:layout_width="242dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/button_eight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/formula" />

</androidx.constraintlayout.widget.ConstraintLayout>